# word

./: .env.example  Dockerfile  README.md  pyproject.toml
src/docling_chat_bot/: main.py
src/docling_chat_bot/app/: doc_processor.py  milvus.py  tokenization.py
src/docling_chat_bot/app/api/: routes.py
src/docling_chat_bot/app/config/: __init__.py  config.py
uploads/: WKR.docx
word/: README.md  docker-compose.yml
word/src/docling_chat_bot/app/: doc_processor.py  logger.py
word/src/docling_chat_bot/app/config/: config_loader.py
